--- a/front/css/index.css
+++ b/front/css/index.css
@@ -144,8 +144,8 @@ body, html {
   gap: var(--gap-max);
   z-index: 10;
   padding-top: var(--padding-pag-6px);
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 
 .search-bar {
@@ -174,6 +174,10 @@ body, html {
   gap: 10px;
   align-items: center;
   font-family: var(--nunito);
+}
+
+.top-section .auth-buttons.hidden {
+    display: none;
 }
 
 .top-section .auth-buttons .btn-auth {
