--- a/front/css/index.css
+++ b/front/css/index.css
@@ -172,6 +172,7 @@ body, html {
   gap: 10px;
   align-items: center;
   font-family: var(--nunito);
+  margin-right: 7px;
 }
 
 .top-section .auth-buttons.hidden {
