--- a/front/css/index.css
+++ b/front/css/index.css
@@ -153,7 +153,7 @@ body, html {
   background: var(--amarillo);
   border: var(--border-estandar);
   margin-left: 7px;
-  margin-right: 5px;
+  margin-right: 2px;
 }
 
 .search-input {
@@ -395,26 +395,67 @@ body, html {
   width: 100%;
   max-height: 100%;
   align-items: stretch;
-  flex-wrap: nowrap; /* Evita que se envuelvan las secciones */ 
+  flex-wrap: nowrap;
 }
 
 .modal-image-section {
   display: flex;
   flex-direction: column;
   background: white;
-  min-width: 300px;
-  max-width: 70%;
-  flex: 0 0 auto;
+  flex: 0 0 auto; /*esta linea hace que se respete el tamaño elegido de la imagen*/
+  max-width: 800px;
+}
+.modal-image-wrapper {
+  width: 100%;
+  max-height: calc(95vh - 100px);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
 }
 
-.modal-image {
-  max-width: 100%;
-  max-height: calc(95vh - 100px); 
-  width: auto;
-  height: auto;
-  object-fit: contain;
-  flex-shrink: 0;
+.modal-image-wrapper.ratio-1-1 {
+  aspect-ratio: 1 / 1;
 }
+
+.modal-image-wrapper.ratio-16-9 {
+  aspect-ratio: 16 / 9;
+}
+
+.modal-image-wrapper.ratio-4-5 {
+  aspect-ratio: 4 / 5;
+}
+
+.modal-image-wrapper.ratio-original {
+  width: auto;
+  max-width: none;
+}
+
+
+
+.modal-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.modal-image-wrapper.ratio-original .modal-image {
+  width: auto;
+  height: 100%;
+  max-width: 100%;
+}
+
+
+.modal-image-section:has(.modal-image-wrapper.ratio-original) {
+  display: inline-flex;
+  width: fit-content;
+  max-width: 95vh;
+}
+
+
+
+
 
 .modal-image.custom-size {
   object-fit: cover;
@@ -422,7 +463,7 @@ body, html {
 }
 
 .modal-author-info {
-  padding: 20px;
+  padding: 15px;
   display: flex;
   align-items: center;
   gap: 12px;
@@ -524,8 +565,8 @@ body, html {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  
 }
+
 
 .comments-header h3 {
   margin: 0;
