--- a/front/css/variables.css
+++ b/front/css/variables.css
@@ -2,7 +2,7 @@
     --verde: #b9d8b8;
     --verde-oscuro: #a0c79f;
     --amarillo: #f1cd71;
-    --amarillo-oscuro: #e0bb5c;
+    --amarillo-oscuro: #ffd56b;
     --blanco: #f7f6ed;
     --negro: #47413e;
     --naranja: #fa6d48;
