--- a/front/css/perfil.css
+++ b/front/css/perfil.css
@@ -412,7 +412,7 @@ body, html {
     background-color: var(--morado);
 }
 
-.estadistica-busquedas {
+.estadistica-publicaciones {
     background-color: var(--celeste);
 }
 
@@ -425,7 +425,7 @@ body, html {
     color: var(--morado-oscuro);
 }
 
-.estadistica-busquedas .estadistica-icon {
+.estadistica-publicaciones .estadistica-icon {
     color: var(--celeste-oscuro);
 }
 
